TOPページの仕上がりイメージをHTMLで作成

--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,4 +1,30 @@
-<!-- <h1>Home#top</h1> -->
-<!-- <p>Find me in app/views/home/top.html.erb</p> -->
+<header>
+    <div class="logo">
+        Hotel Reservation
+    </div>
 
-<h1>Hotel Reservation でまだ体験したことのない旅をしよう</h1>
+    <ul class="header_menu">
+        <li class="header_menu_item">ログイン</li>
+        <li class="header_menu_item">新規登録</li>
+    </ul>
+</header>
+
+<main>
+    <h1 class="main_message">
+        Hotel Reservationで <br>
+        まだ体験したことのない<br>
+        旅をしよう
+    </h1>
+
+    <form class="main_form">
+        <input class="main_form_items main_form_area" type="text" placeholder="エリアを入力">
+        <button class="main_form_items main_form_btn" type="submit">検索する</button>
+    </form>
+
+    <ul class="area_list">
+        <li class="area_list_item">東京</li>
+        <li class="area_list_item">大阪</li>
+        <li class="area_list_item">京都</li>
+        <li class="area_list_item">札幌</li>
+    </ul>
+</main>
