header部分をパーシャル化

--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,13 +1,4 @@
-<header>
-    <div class="logo">
-        Hotel Reservation
-    </div>
-
-    <ul class="header_menu">
-        <li class="header_menu_item">ログイン</li>
-        <li class="header_menu_item">新規登録</li>
-    </ul>
-</header>
+<%= render "shared/header" %>
 
 <main>
     <h1 class="main_message">
