--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -9,7 +9,7 @@
 
     <form class="main_form">
         <input class="main_form_items main_form_area" type="text" placeholder="エリアを入力">
-        <button class="main_form_items main_form_btn" type="submit">検索する</button>
+        <button class="main_form_items main_form_btn" type="submit"><a href="rooms/index">検索する</a></button>
     </form>
 
     <ul class="area_list">
