--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,6 +1,15 @@
 <%= render "shared/header" %>
 
 <main>
+    <form class="row g-3">
+        <div class="col-auto">
+            <input type="password" class="form-control" id="inputPassword2" placeholder="エリアを入力">
+        </div>
+        <div class="col-auto">
+            <button type="submit" class="rooms_index_form_btn btn btn-secondary mb-3">検索する</button>
+        </div>
+    </form>
+
     <div class="card-area">
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
