--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,9 @@
 <header>
-    <div class="logo">
-        Hotel Reservation
-    </div>
+    <a href="/" class="header_logo_url">
+        <div class="logo">
+            Hotel Reservation
+        </div>
+    </a>
 
     <ul class="header_menu">
         <li class="header_menu_item">ログイン</li>
