--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -2,6 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
+.rooms_index_form_btn {
+    width: 100%;
+}
+
 .card-area {
     width: 80%;
     margin-bottom: 10%;
