施設詳細ページのイメージHTMLとページ遷移イメージ用のaタグを作成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,7 @@
 @import "bootstrap";
 @import "_header";
 @import "top";
-@import "rooms";
+@import "rooms.index";
 
 /* reset ================================ */
 * {
