--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -21,7 +21,7 @@
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">住所:東京都大阪京都札幌</li>
                     <li class="list-group-item">宿泊料金：¥0,000（/日）</li>
-                    <a href="#" class="btn btn-secondary">詳細はこちら</a>
+                    <a href="1" class="btn btn-secondary">詳細はこちら</a>
                 </ul>
               </div>
               <div class="card-footer">
