予約確認（作成）画面のイメージHTMLを作成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,8 @@
 @import "bootstrap";
 @import "_header";
 @import "top";
-@import "rooms.index";
+@import "rooms";
+@import "reservations";
 
 /* reset ================================ */
 * {
