--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -18,7 +18,7 @@
                     <a href="#" class="btn btn-secondary">チェックアウト：yyyy/mm/dd</a>
                     <a href="#" class="btn btn-secondary">人数：人</a>
                 </li>
-                <li class="list-group-item"><a href="#" class="btn btn-secondary">予約する</a></li>
+                <li class="list-group-item"><a href="reservations/new" class="btn btn-secondary">予約する</a></li>
             </ul>
           </div>
         </div>
