予約済み一覧ページのイメージHTMLを作成

--- a/app/assets/stylesheets/reservations.scss
+++ b/app/assets/stylesheets/reservations.scss
@@ -11,3 +11,13 @@
 .card {
     margin-bottom: 20px;
 }
+
+//-----------------------------------------//
+.reservations_index {
+    margin: 0 5%;
+}
+
+.reservations_index h2 {
+    color: #fff;
+    margin-bottom: 10px;
+}
