--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -10,8 +10,8 @@
             <p class="card-text">宿泊人数：人</p>
             <p class="card-text">お支払い金額：円</p>
             <p class="card-text">内容にお間違いがなければ『予約確定』ボタンを押してください</p>
-            <a href="#" class="btn btn-primary">予約確定</a>
+            <a href="reservations/index" class="btn btn-primary">予約確定</a>
         </div>
     </div>
-    <a href="index" class="btn btn-secondary">一覧に戻る</a>
+    <a href="rooms/index" class="btn btn-secondary">一覧に戻る</a>
 </div>
