施設登録ページのイメージHTML作成

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,11 +1,15 @@
 <header>
-    <a href="/" class="header_logo_url">
+    <a href="/" class="header_url">
         <div class="logo">
             Hotel Reservation
         </div>
     </a>
 
     <ul class="header_menu">
+        <a href="rooms/index" class="header_url"><li class="header_menu_item">施設一覧</li></a>
+        <a href="rooms/new" class="header_url"><li class="heder_menu_item">施設新規登録</li></a>
+        <a href="reservations/index" class="header_url"><li class="header_menu_item">予約済み一覧</li></a>
+
         <li class="header_menu_item">ログイン</li>
         <li class="header_menu_item">新規登録</li>
     </ul>
