--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -1,4 +1,26 @@
-.header_logo_url {
+header {
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 80px;
+    align-items: center;
+}
+
+.logo {
+    margin-left: 40px;
+}
+
+.header_menu {
+    list-style: none;
+}
+
+.header_menu li {
+    display: inline-block;
+    margin-right: 40px;
+}
+
+.header_url {
     text-decoration: none;
     color: #fff;
-  }
+}
