--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -10,3 +10,14 @@
     width: 80%;
     margin-bottom: 10%;
 }
+
+//----------------------------------------------------------------//
+.rooms_new {
+    margin: 0 auto;
+    width: 60%;
+    color: #fff;
+}
+
+.rooms_new h2 {
+    margin-bottom: 10px;
+}
