--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -6,28 +6,6 @@ body {
     background-color: #333;
 }
 
-header {
-    color: #fff;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    height: 80px;
-    align-items: center;
-}
-
-.logo {
-    margin-left: 40px;
-}
-
-.header_menu {
-    list-style: none;
-}
-
-.header_menu li {
-    display: inline-block;
-    margin-right: 40px;
-}
-
 main {
     display: flex;
     align-items: center;
@@ -42,7 +20,7 @@ a {
     color: #333;
 }
 
-form {
+.main_form {
     display: flex;
     flex-flow: column;
     width: 20%;
